Change database to procure App. name changed to OmniaProcure Effected changes in development.ini

--- a/development.ini
+++ b/development.ini
@@ -1,5 +1,5 @@
 #
-# omnia - Pylons development environment configuration
+# procure - Pylons development environment configuration
 #
 # The %(here)s variable will be replaced with the parent directory of this file
 #
@@ -22,7 +22,7 @@ cache_dir = %(here)s/data
 beaker.session.key = omnia
 beaker.session.secret = somesecret
 
-sqlalchemy.url = mysql://omnia:omnia@localhost/omnia
+sqlalchemy.url = mysql://procure:procure@localhost/procure
 sqlalchemy.pool_recycle = 3600
 sqlalchemy.convert_unicode = true
 
