Remove erecruit.conf Edit procure.conf

--- a/conf/procure.conf
+++ b/conf/procure.conf
@@ -1,14 +1,14 @@
 [general]
-base-url = localhost:6900
+base-url = localhost:5500
 
 [mailserver]
-server = essienitaessien.com
-port = 8045
-username = erecruit
-password = 3r3cru17
-auth = 1
+server = localhost
+port = ""
+username = ""
+password = ""
+auth = 0
 
 [email]
-sender = no-reply@erecruit.com
-subject = Activate your account on erecruit.com
-message = Find below your activation link. You need to activate your account in 48hrs
+sender = no-reply@omnia-procure.com
+subject = ""
+message = ""
